# ssh-relay

./: .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel  README.md  WORKSPACE  go.mod  go.sum  repositories.bzl  tools.go
bazel/: BUILD.godebug_diff  BUILD.godebug_pretty  BUILD.pretty  BUILD.text  BUILD.uuid  BUILD.websocket
cookie-server/backend/example/: BUILD.bazel  example.go
cookie-server/backend/example/proto/v1/: BUILD.bazel  config.proto
cookie-server/backend/example/proto/v1/httppb/: empty.go
cookie-server/cmd/: BUILD.bazel  cookie-server.go
cookie-server/proto/: BUILD.bazel  config.proto
cookie-server/proto/v1/: BUILD.bazel  config.proto  request.proto  service.proto
cookie-server/proto/v1/servicepb/: empty.go
cookie-server/request/cookie/: BUILD.bazel  cookie.go  cookie_test.go
cookie-server/request/cookie/handler/: BUILD.bazel  handler.go  handler_test.go
cookie-server/runner/: BUILD.bazel  cookie.go  doc.go  request.go  runner.go
duration/: BUILD.bazel  duration.go  duration_test.go
examples/: cookie-server-backend.textproto  cookie-server-backend.txtpb  cookie-server-frontend.txtpb  cookie-server.textpb  cookie-server.textproto  ssh-relay-helper.textpb  ssh-relay-helper.textproto  ssh-relay-helper.txtpb  ssh-relay.textpb  ssh-relay.textproto  ssh-relay.txtpb
helper/agent/: BUILD.bazel  agent.go
helper/cmd/: BUILD.bazel  ssh-relay-helper.go
helper/proto/: BUILD.bazel  config.proto
helper/proto/v1/: BUILD.bazel  config.proto
helper/proto/v1/configpb/: empty.go
helper/session/: BUILD.bazel  doc.go  session.go  ssh.go
helper/session/cookie/: BUILD.bazel  cookie.go
helper/session/corprelay/: BUILD.bazel  corprelay.go  doc.go  ssh.go
helper/session/corprelayv4/: BUILD.bazel  corprelayv4.go
http/: BUILD.bazel  client.go  client_test.go  doc.go  http.go  server.go  server_test.go
proto/: BUILD.bazel  cookie.proto  http.proto  tls.proto
proto/v1/: BUILD.bazel  cookie.proto  grpc.proto  http.proto  protocol_version.proto  tls.proto
proto/v1/configpb/: empty.go
proto/v1/cookiepb/: empty.go
proto/v1/grpcpb/: empty.go
proto/v1/httppb/: empty.go
proto/v1/protocolversionpb/: empty.go
proto/v1/tlspb/: empty.go
relay/cmd/: BUILD.bazel  ssh-relay.go
relay/proto/: BUILD.bazel  config.proto
relay/proto/v1/: BUILD.bazel  config.proto
relay/request/: BUILD.bazel  request.go  request_test.go
relay/request/connect/: BUILD.bazel  connect.go  connect_test.go
relay/request/connect/handler/: BUILD.bazel  handler.go
relay/request/corprelay/connect/: BUILD.bazel  connect.go  connect_test.go
relay/request/corprelay/connect/handler/: BUILD.bazel  handler.go
relay/request/corprelay/proxy/: BUILD.bazel  proxy.go
relay/request/proxy/: BUILD.bazel  proxy.go
relay/runner/: BUILD.bazel  connect.go  connect_test.go  corprelay.go  corprelay_test.go  corprelayv4.go  doc.go  origin.go  proxy.go  proxy_test.go  runner.go
relay/session/: BUILD.bazel  session.go  session_test.go
relay/session/manager/: BUILD.bazel  manager.go  manager_test.go
request/: BUILD.bazel  request.go
request/connect/: BUILD.bazel  connect.go
request/cookie/: BUILD.bazel  cookie.go  cookie_test.go
response/: BUILD.bazel  response.go  response_test.go
session/: BUILD.bazel  session.go  session_test.go
session/corprelay/: BUILD.bazel  corprelay.go  corprelay_test.go
session/corprelayv4/: BUILD.bazel  corprelayv4.go  corprelayv4_test.go
session/corprelayv4/command/: BUILD.bazel  command.go  command_test.go
testdata/: BUILD.bazel  test.crt  test.key
testdata/tls_disabled/: cookie-server-backend.txtpb  cookie-server-frontend.txtpb  ssh-relay-helper.txtpb  ssh-relay.txtpb
testdata/tls_enabled/: cookie-server-backend.txtpb  cookie-server-frontend.txtpb  ssh-relay-helper.txtpb  ssh-relay.txtpb
tls/: BUILD.bazel  tls.go  tls_test.go
tools/: bazel_stamp_vars.sh  gopackagesdriver.sh
