load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

package(default_visibility = ["//visibility:public"])

go_library(
    name = "duration",
    srcs = ["duration.go"],
    importpath = "github.com/hazaelsan/ssh-relay/duration",
    deps = [
        "@com_github_golang_protobuf//ptypes:go_default_library_gen",
        "@io_bazel_rules_go//proto/wkt:duration_go_proto",
    ],
)

go_test(
    name = "duration_test",
    srcs = ["duration_test.go"],
    embed = [":duration"],
    deps = [
        "@com_github_kylelemons_pretty//:pretty",
        "@io_bazel_rules_go//proto/wkt:duration_go_proto",
    ],
)
