load("@rules_go//go:def.bzl", "go_library", "go_test")

package(default_visibility = ["//visibility:public"])

go_library(
    name = "duration",
    srcs = ["duration.go"],
    importpath = "github.com/hazaelsan/ssh-relay/duration",
    deps = ["@org_golang_google_protobuf//types/known/durationpb"],
)

go_test(
    name = "duration_test",
    srcs = ["duration_test.go"],
    embed = [":duration"],
    deps = [
        "@com_github_kylelemons_godebug//pretty",
        "@org_golang_google_protobuf//types/known/durationpb",
    ],
)
