package(default_visibility = ["//visibility:public"])

load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "http",
    srcs = [
        "client.go",
        "doc.go",
        "http.go",
        "server.go",
    ],
    importpath = "github.com/hazaelsan/ssh-relay/http",
    deps = [
        "//duration",
        "//proto:http_go_proto",
        "//tls",
        "@com_github_golang_glog//:go_default_library",
        "@io_bazel_rules_go//proto/wkt:duration_go_proto",
    ],
)

go_test(
    name = "client_test",
    srcs = ["client_test.go"],
    embed = ["http"],
    data = ["//testdata"],
    deps = [
        "//proto:http_go_proto",
        "//proto:tls_go_proto",
        "@com_github_kylelemons_pretty//:pretty",
        "@io_bazel_rules_go//proto/wkt:duration_go_proto",
    ],
)
