package(default_visibility = ["//:__subpackages__"])

load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "response",
    srcs = ["response.go"],
    importpath = "github.com/hazaelsan/ssh-relay/response",
)

go_test(
    name = "response_test",
    srcs = ["response_test.go"],
    embed = [":response"],
    deps = ["@com_github_kylelemons_pretty//:pretty"],
)
