package(default_visibility = ["//:__subpackages__"])

load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "session",
    srcs = ["session.go"],
    importpath = "github.com/hazaelsan/ssh-relay/session",
    deps = [
        "@com_github_golang_glog//:go_default_library",
        "@com_github_gorilla_websocket//:go_default_library",
    ],
)

go_test(
    name = "session_test",
    srcs = ["session_test.go"],
    embed = [":session"],
    deps = ["@com_github_kylelemons_pretty//:pretty"],
)
