load("@rules_go//go:def.bzl", "go_library")

package(default_visibility = ["//:__subpackages__"])

go_library(
    name = "session",
    srcs = ["session.go"],
    importpath = "github.com/hazaelsan/ssh-relay/session",
    deps = [
        "@com_github_golang_glog//:glog",
        "@com_github_google_uuid//:uuid",
        "@com_github_gorilla_websocket//:websocket",
    ],
)
