package(default_visibility = ["//visibility:public"])

load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "tls",
    srcs = ["tls.go"],
    importpath = "github.com/hazaelsan/ssh-relay/tls",
    deps = ["//proto/v1:tls_go_proto"],
)

go_test(
    name = "tls_test",
    srcs = ["tls_test.go"],
    data = ["//testdata"],
    embed = [":tls"],
    deps = [
        "//proto/v1:tls_go_proto",
        "@com_github_kylelemons_godebug//:pretty",
    ],
)
