package(default_visibility = ["//visibility:private"])

load("@io_bazel_rules_go//go:def.bzl", "go_binary")

go_binary(
    name = "cookie_server",
    srcs = ["cookie-server.go"],
    deps = [
        "//cookie-server/proto:config_go_proto",
        "//cookie-server/runner",
        "@com_github_golang_glog//:glog",
        "@com_github_golang_protobuf//proto:go_default_library",
    ],
)
