load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

package(default_visibility = ["//visibility:private"])

go_binary(
    name = "cookie_server",
    srcs = ["cookie-server.go"],
    deps = [
        "//cookie-server/proto/v1:config_go_proto",
        "//cookie-server/runner",
        "@com_github_golang_glog//:go_default_library",
        "@com_github_golang_protobuf//proto:go_default_library",
    ],
)
