load("@rules_go//go:def.bzl", "go_binary", "go_library")

package(default_visibility = ["//visibility:private"])

go_binary(
    name = "cookie_server",
    embed = [":cmd_lib"],
)

go_library(
    name = "cmd_lib",
    srcs = ["cookie-server.go"],
    importpath = "github.com/hazaelsan/ssh-relay/cookie-server/cmd",
    deps = [
        "//cookie-server/proto/v1:config_go_proto",
        "//cookie-server/runner",
        "@com_github_golang_glog//:glog",
        "@org_golang_google_protobuf//encoding/prototext",
    ],
)
