load("@io_bazel_rules_go//go:def.bzl", "go_library")

package(default_visibility = ["//cookie-server:__subpackages__"])

go_library(
    name = "runner",
    srcs = [
        "cookie.go",
        "doc.go",
        "runner.go",
    ],
    importpath = "github.com/hazaelsan/ssh-relay/cookie-server/runner",
    deps = [
        "//cookie-server/proto/v1:config_go_proto",
        "//cookie-server/request/cookie",
        "//cookie-server/request/cookie/handler",
        "//http",
        "@com_github_golang_glog//:glog",
    ],
)
