load("@io_bazel_rules_go//go:def.bzl", "go_library")

package(default_visibility = ["//cookie-server:__subpackages__"])

go_library(
    name = "runner",
    srcs = [
        "cookie.go",
        "doc.go",
        "runner.go",
    ],
    importpath = "github.com/hazaelsan/ssh-relay/cookie-server/runner",
    deps = [
        "//cookie-server/proto/v1:config_go_proto",
        "//cookie-server/proto/v1:request_go_proto",
        "//cookie-server/proto/v1:service_go_proto",
        "//cookie-server/request/cookie",
        "//cookie-server/request/cookie/handler",
        "//http",
        "//tls",
        "@com_github_golang_glog//:glog",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//credentials:go_default_library",
    ],
)
