load("@rules_go//go:def.bzl", "go_library")

package(default_visibility = ["//helper:__subpackages__"])

go_library(
    name = "agent",
    srcs = ["agent.go"],
    importpath = "github.com/hazaelsan/ssh-relay/helper/agent",
    deps = [
        "//helper/proto/v1:config_go_proto",
        "//helper/session",
        "//helper/session/cookie",
        "//helper/session/corprelay",
        "//helper/session/corprelayv4",
        "//http",
    ],
)
