package(default_visibility = ["//visibility:public"])

load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "config_proto",
    srcs = ["config.proto"],
    deps = ["//proto:http_proto"],
)

go_proto_library(
    name = "config_go_proto",
    importpath = "github.com/hazaelsan/ssh-relay/helper/proto/config_go_proto",
    proto = ":config_proto",
    deps = ["//proto:http_go_proto"],
)
