package(default_visibility = ["//helper:__subpackages__"])

load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "session",
    srcs = [
        "doc.go",
        "session.go",
        "ssh.go",
    ],
    importpath = "github.com/hazaelsan/ssh-relay/helper/session",
    deps = [
        "//proto/v1:http_go_proto",
    ],
)
