load("@rules_proto//proto:defs.bzl", "proto_library")

package(default_visibility = ["//visibility:public"])

load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "cookie_proto",
    srcs = ["cookie.proto"],
    deps = [
        "@com_google_protobuf//:duration_proto",
        "@go_googleapis//google/api:annotations_proto",
    ],
)

go_proto_library(
    name = "cookie_go_proto",
    importpath = "github.com/hazaelsan/ssh-relay/proto/v1/cookie_go_proto",
    proto = ":cookie_proto",
    deps = ["@go_googleapis//google/api:annotations_go_proto"],
)

proto_library(
    name = "grpc_proto",
    srcs = ["grpc.proto"],
    deps = [
        "@com_github_hazaelsan_go_tls//proto/v1:tls_proto",
        "@go_googleapis//google/api:annotations_proto",
    ],
)

go_proto_library(
    name = "grpc_go_proto",
    importpath = "github.com/hazaelsan/ssh-relay/proto/v1/grpc_go_proto",
    proto = ":grpc_proto",
    deps = [
        "@com_github_hazaelsan_go_tls//proto/v1:tls_go_proto",
        "@go_googleapis//google/api:annotations_go_proto",
    ],
)

proto_library(
    name = "http_proto",
    srcs = ["http.proto"],
    deps = [
        "@com_github_hazaelsan_go_tls//proto/v1:tls_proto",
        "@com_google_protobuf//:duration_proto",
        "@go_googleapis//google/api:annotations_proto",
    ],
)

go_proto_library(
    name = "http_go_proto",
    importpath = "github.com/hazaelsan/ssh-relay/proto/v1/http_go_proto",
    proto = ":http_proto",
    deps = [
        "@com_github_hazaelsan_go_tls//proto/v1:tls_go_proto",
        "@go_googleapis//google/api:annotations_go_proto",
    ],
)
