load("@protobuf//bazel:proto_library.bzl", "proto_library")
load("@rules_go//proto:def.bzl", "go_proto_library")

package(default_visibility = ["//visibility:public"])

proto_library(
    name = "cookie_proto",
    srcs = ["cookie.proto"],
    deps = [
        "@googleapis//google/api:field_behavior_proto",
        "@protobuf//:duration_proto",
    ],
)

proto_library(
    name = "grpc_proto",
    srcs = ["grpc.proto"],
    deps = [
        ":tls_proto",
        "@googleapis//google/api:field_behavior_proto",
    ],
)

proto_library(
    name = "http_proto",
    srcs = ["http.proto"],
    deps = [
        ":tls_proto",
        "@googleapis//google/api:field_behavior_proto",
        "@protobuf//:duration_proto",
    ],
)

proto_library(
    name = "tls_proto",
    srcs = ["tls.proto"],
)

go_proto_library(
    name = "cookie_go_proto",
    importpath = "github.com/hazaelsan/ssh-relay/proto/v1/cookiepb",
    proto = ":cookie_proto",
    deps = ["@org_golang_google_genproto_googleapis_api//annotations"],
)

go_proto_library(
    name = "grpc_go_proto",
    importpath = "github.com/hazaelsan/ssh-relay/proto/v1/grpcpb",
    proto = ":grpc_proto",
    deps = [
        ":tls_go_proto",
        "@org_golang_google_genproto_googleapis_api//annotations",
    ],
)

go_proto_library(
    name = "http_go_proto",
    importpath = "github.com/hazaelsan/ssh-relay/proto/v1/httppb",
    proto = ":http_proto",
    deps = [
        ":tls_go_proto",
        "@org_golang_google_genproto_googleapis_api//annotations",
    ],
)

go_proto_library(
    name = "tls_go_proto",
    importpath = "github.com/hazaelsan/ssh-relay/proto/v1/tlspb",
    proto = ":tls_proto",
)
