load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

package(default_visibility = ["//visibility:private"])

go_binary(
    name = "ssh_relay",
    srcs = ["ssh-relay.go"],
    deps = [
        "//relay/proto/v1:config_go_proto",
        "//relay/runner",
        "@com_github_golang_glog//:go_default_library",
        "@com_github_golang_protobuf//proto:go_default_library",
    ],
)
