load("@rules_go//go:def.bzl", "go_binary", "go_library")

package(default_visibility = ["//visibility:private"])

go_binary(
    name = "ssh_relay",
    embed = [":cmd_lib"],
)

go_library(
    name = "cmd_lib",
    srcs = ["ssh-relay.go"],
    importpath = "github.com/hazaelsan/ssh-relay/relay/cmd",
    deps = [
        "//relay/proto/v1:config_go_proto",
        "//relay/runner",
        "@com_github_golang_glog//:glog",
        "@org_golang_google_protobuf//encoding/prototext",
    ],
)
