load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

package(default_visibility = ["//relay:__subpackages__"])

go_library(
    name = "runner",
    srcs = [
        "corprelay.go",
        "corprelayv4.go",
        "doc.go",
        "runner.go",
    ],
    importpath = "github.com/hazaelsan/ssh-relay/relay/runner",
    deps = [
        "//duration",
        "//http",
        "//relay/proto/v1:config_go_proto",
        "//relay/request",
        "//relay/request/corprelay/connect",
        "//relay/request/corprelay/connect/handler",
        "//relay/request/corprelay/proxy",
        "//relay/session/manager",
        "//request",
        "//session",
        "@com_github_golang_glog//:go_default_library",
        "@com_github_gorilla_websocket//:go_default_library",
    ],
)

go_test(
    name = "corprelay_test",
    srcs = ["corprelay_test.go"],
    embed = [":runner"],
    deps = [
        "//relay/proto/v1:config_go_proto",
        "//relay/session/manager",
        "//session",
        "@com_github_google_uuid//:go_default_library",
        "@com_github_gorilla_websocket//:go_default_library",
        "@com_github_kylelemons_godebug//:pretty",
    ],
)
