load("@rules_go//go:def.bzl", "go_library", "go_test")

package(default_visibility = ["//relay:__subpackages__"])

go_library(
    name = "runner",
    srcs = [
        "corprelay.go",
        "corprelayv4.go",
        "doc.go",
        "runner.go",
    ],
    importpath = "github.com/hazaelsan/ssh-relay/relay/runner",
    deps = [
        "//duration",
        "//http",
        "//proto/v1:protocolversionpb_go_proto",
        "//relay/proto/v1:config_go_proto",
        "//relay/request",
        "//relay/request/corprelay/connect",
        "//relay/request/corprelay/connect/handler",
        "//relay/request/corprelay/proxy",
        "//relay/session/manager",
        "//request",
        "//session",
        "@com_github_golang_glog//:glog",
        "@com_github_gorilla_websocket//:websocket",
    ],
)

go_test(
    name = "corprelay_test",
    srcs = ["corprelay_test.go"],
    embed = [":runner"],
    deps = [
        "//relay/proto/v1:config_go_proto",
        "//relay/session/manager",
        "//session",
        "@com_github_google_uuid//:uuid",
        "@com_github_gorilla_websocket//:websocket",
        "@com_github_kylelemons_godebug//pretty",
    ],
)

go_test(
    name = "runner_test",
    srcs = ["corprelay_test.go"],
    embed = [":runner"],
    deps = [
        "//relay/proto/v1:config_go_proto",
        "//relay/session/manager",
        "//session",
        "@com_github_google_uuid//:uuid",
        "@com_github_gorilla_websocket//:websocket",
        "@com_github_kylelemons_godebug//pretty",
    ],
)
