package(default_visibility = ["//relay:__subpackages__"])

load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "session",
    srcs = ["session.go"],
    importpath = "github.com/hazaelsan/ssh-relay/relay/session",
    deps = [
        "//session",
        "//session/corprelay",
        "@com_github_golang_glog//:glog",
        "@com_github_google_uuid//:uuid",
        "@com_github_gorilla_websocket//:websocket",
    ],
)

go_test(
    name = "session_test",
    srcs = ["session_test.go"],
    embed = [":session"],
)
