package(default_visibility = ["//:__subpackages__"])

load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "cookie",
    srcs = ["cookie.go"],
    importpath = "github.com/hazaelsan/ssh-relay/request/cookie",
    deps = [
        "//request",
        "@com_github_google_uuid//:go_default_library",
    ],
)

go_test(
    name = "cookie_test",
    srcs = ["cookie_test.go"],
    embed = [":cookie"],
    deps = [
        "@com_github_google_uuid//:go_default_library",
        "@com_github_kylelemons_pretty//:pretty",
    ],
)
