load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

package(default_visibility = ["//:__subpackages__"])

go_library(
    name = "corprelay",
    srcs = ["corprelay.go"],
    importpath = "github.com/hazaelsan/ssh-relay/session/corprelay",
    deps = [
        "//session",
        "@com_github_golang_glog//:go_default_library",
        "@com_github_google_uuid//:go_default_library",
        "@com_github_gorilla_websocket//:go_default_library",
    ],
)

go_test(
    name = "corprelay_test",
    srcs = ["corprelay_test.go"],
    embed = [":corprelay"],
    deps = ["@com_github_kylelemons_godebug//pretty:go_default_library"],
)
