package(default_visibility = ["//:__subpackages__"])

load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "corprelayv4",
    srcs = ["corprelayv4.go"],
    importpath = "github.com/hazaelsan/ssh-relay/session/corprelayv4",
    deps = [
        "//session",
        "//session/corprelayv4/command",
        "@com_github_golang_glog//:glog",
        "@com_github_google_uuid//:uuid",
        "@com_github_gorilla_websocket//:websocket",
    ],
)

go_test(
    name = "corprelayv4_test",
    srcs = ["corprelayv4_test.go"],
    embed = [":corprelayv4"],
    deps = ["@com_github_kylelemons_pretty//:pretty"],
)
