load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

package(default_visibility = ["//cookie-server:__subpackages__"])

go_binary(
    name = "example",
    srcs = ["example.go"],
    deps = [
        "//cookie-server/backend/example/proto/v1:config_go_proto",
        "//cookie-server/proto/v1:service_go_proto",
        "@com_github_golang_glog//:go_default_library",
        "@com_github_golang_protobuf//proto:go_default_library",
        "@com_github_hazaelsan_go_tls//:tls",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//credentials:go_default_library",
    ],
)
