load("@rules_go//go:def.bzl", "go_binary", "go_library")

package(default_visibility = ["//cookie-server:__subpackages__"])

go_binary(
    name = "example",
    embed = [":example_lib"],
)

go_library(
    name = "example_lib",
    srcs = ["example.go"],
    importpath = "github.com/hazaelsan/ssh-relay/cookie-server/backend/example",
    deps = [
        "//cookie-server/backend/example/proto/v1:config_go_proto",
        "//cookie-server/proto/v1:service_go_proto",
        "//tls",
        "@com_github_golang_glog//:glog",
        "@org_golang_google_grpc//:grpc",
        "@org_golang_google_grpc//credentials",
        "@org_golang_google_protobuf//encoding/prototext",
    ],
)
